[gd_scene load_steps=14 format=2]

[ext_resource path="res://states/general/overlay/overlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://states/state_combat/player/player.gd" type="Script" id=2]
[ext_resource path="res://states/state_combat/state_combat.gd" type="Script" id=3]
[ext_resource path="res://states/state_combat/athlete/athlete.tscn" type="PackedScene" id=4]
[ext_resource path="res://states/state_combat/item/item.tscn" type="PackedScene" id=5]
[ext_resource path="res://states/state_combat/item_spawner.gd" type="Script" id=6]
[ext_resource path="res://states/state_combat/enemy/enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://states/state_combat/combat_end_card/combat_end_card.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 500, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 500, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 100, 140 )

[node name="state_combat" type="Node2D"]
script = ExtResource( 3 )

[node name="bg" type="Node2D" parent="."]

[node name="barriers" type="Node2D" parent="."]

[node name="left" type="StaticBody2D" parent="barriers"]
position = Vector2( -10, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="barriers/left"]
shape = SubResource( 1 )

[node name="right" type="StaticBody2D" parent="barriers"]
position = Vector2( 510, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="barriers/right"]
shape = SubResource( 2 )

[node name="top" type="StaticBody2D" parent="barriers"]
position = Vector2( 500, 170 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="barriers/top"]
shape = SubResource( 3 )

[node name="bottom" type="StaticBody2D" parent="barriers"]
position = Vector2( 500, 590 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="barriers/bottom"]
shape = SubResource( 4 )

[node name="enemies" type="Node2D" parent="."]

[node name="enemy" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 675, 525 )

[node name="enemy2" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 645, 253 )
pathes = [ [ "N" ] ]

[node name="enemy3" parent="enemies" instance=ExtResource( 7 )]
position = Vector2( 850, 375 )
pathes = [ [ "S" ] ]

[node name="item_spawner" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="items" type="Node2D" parent="item_spawner"]

[node name="item1" parent="item_spawner/items" instance=ExtResource( 5 )]
position = Vector2( 50, 225 )

[node name="item2" parent="item_spawner/items" instance=ExtResource( 5 )]
position = Vector2( 50, 525 )

[node name="item3" parent="item_spawner/items" instance=ExtResource( 5 )]
position = Vector2( 450, 450 )

[node name="item4" parent="item_spawner/items" instance=ExtResource( 5 )]
position = Vector2( 450, 300 )

[node name="Timer" type="Timer" parent="item_spawner"]
one_shot = true

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 241.532, 378.521 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 5 )

[node name="athletes" type="Node2D" parent="player"]

[node name="top" parent="player/athletes" instance=ExtResource( 4 )]
position = Vector2( -70, -110 )

[node name="front" parent="player/athletes" instance=ExtResource( 4 )]
position = Vector2( 70, 0 )

[node name="bottom" parent="player/athletes" instance=ExtResource( 4 )]
position = Vector2( -70, 110 )

[node name="waypoints" type="Node2D" parent="."]

[node name="N" type="Position2D" parent="waypoints"]
position = Vector2( 750, 250 )

[node name="NE" type="Position2D" parent="waypoints"]
position = Vector2( 925, 250 )

[node name="E" type="Position2D" parent="waypoints"]
position = Vector2( 925, 380 )

[node name="SE" type="Position2D" parent="waypoints"]
position = Vector2( 925, 525 )

[node name="S" type="Position2D" parent="waypoints"]
position = Vector2( 750, 525 )

[node name="SW" type="Position2D" parent="waypoints"]
position = Vector2( 600, 525 )

[node name="W" type="Position2D" parent="waypoints"]
position = Vector2( 600, 375 )

[node name="NW" type="Position2D" parent="waypoints"]
position = Vector2( 600, 250 )

[node name="C" type="Position2D" parent="waypoints"]
position = Vector2( 750, 375 )

[node name="projectiles" type="Node2D" parent="."]

[node name="overlay" parent="." instance=ExtResource( 1 )]

[node name="combat_end_card" parent="." instance=ExtResource( 8 )]
[connection signal="enemy_hit" from="enemies/enemy" to="." method="player_point_scored"]
[connection signal="enemy_hit" from="enemies/enemy2" to="." method="player_point_scored"]
[connection signal="enemy_hit" from="enemies/enemy3" to="." method="player_point_scored"]
[connection signal="timeout" from="item_spawner/Timer" to="item_spawner" method="_on_Timer_timeout"]
[connection signal="athlete_hit" from="player/athletes/top" to="." method="enemy_point_scored"]
[connection signal="item_collected" from="player/athletes/top" to="item_spawner" method="_on_item_collected"]
[connection signal="athlete_hit" from="player/athletes/front" to="." method="enemy_point_scored"]
[connection signal="item_collected" from="player/athletes/front" to="item_spawner" method="_on_item_collected"]
[connection signal="athlete_hit" from="player/athletes/bottom" to="." method="enemy_point_scored"]
[connection signal="item_collected" from="player/athletes/bottom" to="item_spawner" method="_on_item_collected"]
